# utilities

./: README
compiling/: Makefile  README
envmap_slicer/: slice.sh
eu4/: colonization.py
gitignore/: .gitignore
iptables/: iptables_reset.sh  iptables_rules.sh  manual_rules.sh
network/: check_network_stats.sh  find_lan_ssh.sh  ssh_logins.sh  ssh_users.sh  wifi_scan.sh
osc_receiver/: CMakeLists.txt  INSTALL  README.md  osc_receiver.cpp
osc_sender/: .gitignore  CMakeLists.txt  LICENCE  README.md  osc_sender.cpp
recording/: stream_desktop.sh
vim/: .vimrc  vimrc
